--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "me.shouheng.suix"
+        applicationId "me.shouheng.dynamicsample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -42,23 +42,26 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:multidex:1.0.3"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    // google
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
+    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:slidingpanelayout:28.0.0'
+    implementation 'com.android.support:swiperefreshlayout:28.0.0'
+    implementation 'com.android.support:drawerlayout:28.0.0'
+    // self
     implementation ("com.github.Shouheng88:vmlib:1.7.1") {
         exclude group: 'com.github.Shouheng88', module: "uix-core"
         exclude group: 'com.github.Shouheng88', module: "uix-widget"
     }
     implementation "com.github.Shouheng88:utils-ktx:2.1.7"
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    // uix
+    implementation "com.github.Shouheng88:uix-core:1.8.1"
     implementation 'com.just.agentweb:agentweb:4.1.4'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.github.Shouheng88:icamera:0.2.0-beta'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:slidingpanelayout:28.0.0'
-    implementation 'com.android.support:swiperefreshlayout:28.0.0'
-    implementation 'com.android.support:drawerlayout:28.0.0'
-    // uix
-    implementation "com.github.Shouheng88:uix-core:1.8.1"
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    // network
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
