--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation ("com.github.Shouheng88:vmlib:1.7.1") {
         exclude group: 'com.github.Shouheng88', module: "uix-core"
         exclude group: 'com.github.Shouheng88', module: "uix-widget"
+        exclude group: 'com.github.Shouheng88', module: "utils-core"
     }
+    implementation "com.github.Shouheng88:utils-core:${androidUtilsVersion}"
     implementation "com.github.Shouheng88:utils-ktx:2.1.7"
     // uix
     implementation "com.github.Shouheng88:uix-core:1.8.1"
@@ -64,4 +66,6 @@ dependencies {
     // network
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    // dynamic
+    implementation project(":library")
 }
