feat: basic functions

--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -35,6 +35,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            res.srcDirs = ['src/main/res', 'src/main/res-another']
+        }
+    }
 }
 
 dependencies {
