--- a/resource/src/main/AndroidManifest.xml
+++ b/resource/src/main/AndroidManifest.xml
@@ -1,5 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="me.shouheng.resources">
+<manifest package="me.shouheng.resources">
 
 </manifest>
