feat: add sample

--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -38,7 +38,7 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
-            res.srcDirs = ['src/main/res', 'src/main/res-another']
+            res.srcDirs = ['src/main/res', 'src/main/res-night']
         }
     }
 }
